Change menu style, fix a few z-index bugs

--- a/source/client/index.css
+++ b/source/client/index.css
@@ -9,16 +9,20 @@ canvas {
 }
 
 #menu {
-  background-color: rgba(255, 255, 255, 0.75);
   bottom: 0%;
   font-family: "m5x7";
-  font-size: 18pt;
+  font-size: 16pt;
   position: absolute;
+  display: flex;
+  gap: 1vw;
+  padding: 5px 1vw;
 }
 
 .tab_button {
+  background-color: white;
+  border: 1px solid #000;
+  border-radius: 3px;
   cursor: pointer;
-  margin:5px;
   min-width: 100px;
   text-align: center;
   user-select: none;
